--- a/css/index.css
+++ b/css/index.css
@@ -101,6 +101,104 @@ b {
 .waves.on {
     transform: scaleY(1.5);
 }
+/* 버블효과 */
+.wrapper {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: 100;
+}
+.wrapper .bubble {
+    height: 60px;
+    width: 60px;
+    border: 2px solid rgba(255, 255, 255, 0.7);
+    border-radius: 50px;
+    position: absolute;
+    animation: animate 10s linear infinite;
+}
+.wrapper .bubble:nth-child(1) {
+    top: 20%;
+    left: 20%;
+    animation-duration: 8s;
+  }
+  .wrapper .bubble:nth-child(2) {
+    top: 60%;
+    left: 80%;
+    animation-duration: 10s;
+  }
+  .wrapper .bubble:nth-child(3) {
+    top: 40%;
+    left: 40%;
+    animation-duration: 3s;
+  }
+  .wrapper .bubble:nth-child(4) {
+    top: 66%;
+    left: 30%;
+    animation-duration: 7s;
+  }
+  .wrapper .bubble:nth-child(5) {
+    top: 90%;
+    left: 10%;
+    animation-duration: 9s;
+  }
+  .wrapper .bubble:nth-child(6) {
+    top: 30%;
+    left: 60%;
+    animation-duration: 5s;
+  }
+  .wrapper .bubble:nth-child(7) {
+    top: 70%;
+    left: 20%;
+    animation-duration: 8s;
+  }
+  .wrapper .bubble:nth-child(8) {
+    top: 75%;
+    left: 60%;
+    animation-duration: 10s;
+  }
+  .wrapper .bubble:nth-child(9) {
+    top: 50%;
+    left: 50%;
+    animation-duration: 6s;
+  }
+  .wrapper .bubble:nth-child(10) {
+    top: 45%;
+    left: 20%;
+    animation-duration: 10s;
+  }
+  .wrapper .bubble:nth-child(11) {
+    top: 10%;
+    left: 90%;
+    animation-duration: 9s;
+  }
+  .wrapper .bubble:nth-child(12) {
+    top: 20%;
+    left: 70%;
+    animation-duration: 7s;
+  }
+  .wrapper .bubble:nth-child(13) {
+    top: 20%;
+    left: 20%;
+    animation-duration: 8s;
+  }
+  .wrapper .bubble:nth-child(14) {
+    top: 60%;
+    left: 5%;
+    animation-duration: 6s;
+  }
+  .wrapper .bubble:nth-child(15) {
+    top: 90%;
+    left: 80%;
+    animation-duration: 9s;
+  }
+  @keyframes animate {
+    0% {
+      transform: scale(0) translateY(0) rotate(70deg);
+    }
+    100% {
+      transform: scale(1.3) translateY(-100px) rotate(360deg);
+    }
+
 
 /* top */
 .btnTop {
@@ -133,6 +231,68 @@ b {
     background-image: linear-gradient(90deg, #000 1px, transparent 1px), linear-gradient(90deg, #000 1px, transparent 1px), linear-gradient(#000 1px, transparent 1px), linear-gradient(#000 1px, transparent 1px);
 }
 
+/* 마우스 스크롤 */
+/* .hero {
+	position: relative;
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 12rem 2rem;
+	color: white;
+	background: {
+		image: linear-gradient(to bottom,  rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%), url('https://source.unsplash.com/random/1920x1080/?sky');
+		blend-mode: multiply;
+		size: cover;
+	}
+}
+
+.mouse {
+	max-width: $mouse-width;
+	width: 100%;
+	height: auto;
+}
+
+.scroll {
+	animation-name: scroll;
+	animation-duration: 1.5s;
+	animation-timing-function: cubic-bezier(0.650, -0.550, 0.250, 1.500);
+	animation-iteration-count: infinite;
+	transform-origin: 50% 20.5px;
+	will-change: transform, opacity;
+	opacity: 1;
+}
+
+.scroll-link {
+	position: absolute;
+	bottom: 1rem;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+@keyframes scroll {
+
+	0%, 20% {
+		transform: translateY(0) scaleY(1);
+	}
+
+	100% {
+		transform: translateY(36px) scaleY(2);
+		opacity: 0;
+	}
+
+}
+
+.content {
+	min-height: 100vh;
+	max-width: 28rem;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center; 
+} */
 /* header */
 .header {
     position: relative;
@@ -359,13 +519,15 @@ b {
 }
 
 .skills circle {
-    fill: none;
-    stroke: #a4aff7;
+    /* fill: #fff; */
+    stroke: #fff;
     stroke-dasharray: 314;
     stroke-dashoffset: 314;
     transition: all 0.5s ease 0s;
     stroke-width: 9;
+    opacity: 0.6;
 }
+
 
 .skills p {
     font-size: 13px;
@@ -424,8 +586,12 @@ b {
     height: 290px;
     padding: 10px 10px;
     position: relative;
+    /* animation: motion 0.3s linear 0s infinite alternate; margin-top: 0; */
+}  
+@keyframes motion {
+    /* 0% {margin-top: 0px;}
+    100% {margin-top: 10px;} */
 }
-
 .popupImg>ul>li img {
     width: 100%;
     height: 100%;
@@ -650,6 +816,7 @@ b {
     width: 84%;
     height: 91%;
     margin: 0 auto;
+    position: relative;
 }
 
 .bannerbox img {
@@ -671,36 +838,46 @@ b {
 }
 
 .bannerImg {
-      left: 0%;
-      top: 21%;
-      /* transform: translate(-50%,-50%); */
-      width: 400%;
-      position: absolute;
-}
-
-.bannerImg>ul {
-    display: flex;
-}
-
-.bannerImg>ul>li {
-    width: 1594px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
-    height: 410px;
+    overflow: hidden;
     position: absolute;
-    left: 2%;
-    top: 0;
+    left: 58%;
+    top: 36%;
+    transform: translate(-50%, -50%);
+}
+
+.train{
+    width:400%;
+    height: 100%;
+    display: flex;
+    transition:all 0s ease 0s;
+}
+
+.train>li {
+    flex: 1;
+    position: relative;
+}
+.bannerImg>ul>li.on {
+
 }
 
 .bannerImg>ul>li img {
-    width: 100%;
+    width: 1597px;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .bannerImg>ul>li>ul {
-   display: flex;
+    display: flex;
 }
-
+.bannerImg>ul>li>ul>li{
+    position: absolute;
+    left: 44%;
+    bottom: 0%;
+    transform: translate(-50%, -50%);
+}
 .tabmenu {
     position: absolute;
     left: 150px;
@@ -742,6 +919,15 @@ b {
     display: inline-block;
 
 }
+
+.train>li>ul>li h4{
+    font-size: 2rem;
+    font-weight: bold;
+}
+.train>li>ul>li>ul>li{
+    font-size: 18px;
+    font-weight: 400;
+}
 /* .redesign */
 .redesign {
     width: 100%;
@@ -764,10 +950,11 @@ b {
 
 .redesign h1 {
     position: absolute;
-    left: 234px;
-    top: 53px;
-    font-size: 25px;
+    left: 297px;
+    top: 88px;
+    font-size: 2rem;
     font-weight: bolder;
+    text-transform: uppercase;
 }
 
 .hongkongmain {
@@ -777,10 +964,11 @@ b {
 }
 
 .hongkongmain figure {
-    width: 800px;
+
+    width: 803px;
     height: 400px;
     overflow: hidden;
-    border-radius: 15px;
+
 }
 
 .hongkongmain>figure>img {
