--- a/css/index.css
+++ b/css/index.css
@@ -107,7 +107,8 @@ b {
     height: 100%;
     width: 100%;
     position: absolute;
-    z-index: 100;
+    z-index: 10;
+    pointer-events: none;
 }
 .wrapper .bubble {
     height: 60px;
@@ -215,6 +216,11 @@ b {
 .bar-container img{
     max-height: 50px;
 }
+
+.wrap>div{
+    /* border: 1px solid red; */
+}
+
 /* top */
 .btnTop {
     position: fixed;
@@ -309,7 +315,7 @@ b {
 /*aboutTop*/
 .aboutT {
     background: #ffdfb0;
-    height: 100%;
+    height: 100vh;
     width: 84%;
     margin: 0 auto;
     border-radius: 20px 20px 0 0;
@@ -323,9 +329,9 @@ b {
 }
 
 .about_list>ul>li {
-    padding-top: 25px;
-    padding-bottom: 55px;
-    font-size: 23px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    font-size: 15px;
     font-weight: bold;
     margin: 0 22px;
     text-transform: uppercase;
@@ -359,9 +365,9 @@ b {
 }
 
 .about_mid {
-    margin: 100px 0;
     display: flex;
     padding: 0 140px;
+    margin-bottom: 95px;
 }
 
 .about_mid svg {
@@ -428,9 +434,9 @@ b {
 .about_bot>ul>li>h4+* {
     flex-grow: 1;
 }
-/* about bottom */
+/* about bottom - SKILLS*/
 .aboutB {
-    height: 60vh;
+    height: 100vh;
     width: 84%;
     margin: 0 auto;
     background: #ffdfb0;
@@ -439,104 +445,68 @@ b {
     box-shadow: 4px 8px 8px hsl(0deg 0% 0% / 0.38);
     position: relative;
 }
-
-.skill{
-    width: 160px;
-    height: 160px;
-    /* position: relative; */
-}
-.outer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 160px;
-    width: 160px;
-    border-radius: 50%;
-    padding:10px;
-    box-shadow: 6px 6px 10px -1px rgba(0,0,0,0.15),
-                -6px -6px 10px -1px rgba(255,255,255,0.7);
-}
-.inner{
-    height: 120px;
-    width: 120px;
-    border-radius: 50%;
-    box-shadow:inset 4px 4px 6px -1px rgba(0,0,0,2),
-                inset -4px -4px 6px -1px rgba(255,255,255,0.7),
-                -0.5px -0.5px 0px rgba(255,255,255,1),
-                0.5px 0.5px 0px  rgba(0,0,0,0.15),
-                0px 12px 10px -10px rgba(0,0,0,0.05),
-}
- /* .skills h4 {
-    font-size: 20px;
-    font-weight: bold;
-    text-transform: uppercase;
-    padding: 80px 140px;
-}
-
-.skills>ul {
-    margin: -55px 140px;
-    display: flex;
-}
-
-.skills>ul>li {
-    flex: 1;
-    position: relative;
-}
-
-.skills>ul>li img {
-    width: 66px;
-    height: 66px;
-    object-fit: contain;
+.circlebox{
     position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}  */
-/* 
-.skills figure{
-    -moz-box-shadow: inset -8px -8px 8px 0 rgba(174, 174, 192, 0.25),
-    inset 8px 8px 8px 0 #fff, -8px -8px 24px 0 #fff,
-    8px 8px 24px 0 rgba(174, 174, 192, 0.4);
-  -webkit-box-shadow: inset -8px -8px 8px 0 rgba(174, 174, 192, 0.25),
-    inset 8px 8px 8px 0 #fff, -8px -8px 24px 0 #fff,
-    8px 8px 24px 0 rgba(174, 174, 192, 0.4);
-  box-shadow: inset -8px -8px 8px 0 rgba(174, 174, 192, 0.25),
-    inset 8px 8px 8px 0 #fff, -8px -8px 24px 0 #fff,
-    8px 8px 24px 0 rgba(174, 174, 192, 0.4);
-}
-.skills figure:hover{
-    -moz-box-shadow: inset -8px -8px 8px 0 rgba(255, 255, 255, 0.7),
-    inset 8px 8px 8px 0 rgba(174, 174, 192, 0.2);
-  -webkit-box-shadow: inset -8px -8px 8px 0 rgba(255, 255, 255, 0.7),
-    inset 8px 8px 8px 0 rgba(174, 174, 192, 0.2);
-  box-shadow: inset -8px -8px 8px 0 rgba(255, 255, 255, 0.7),
-    inset 8px 8px 8px 0 rgba(174, 174, 192, 0.2);
-}  */
-
- /* .skills .per {
-    position: absolute;
-    left: 50%;
     top: 50%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
     transform: translate(-50%,-50%);
-} 
-
-.skills circle {
+}
+.circlebox svg{
     fill: none;
-    stroke: #fff;
-    stroke-dasharray: 314;
-    stroke-dashoffset: 314;
-    transition: all 0.5s ease 0s;
-    stroke-width: 9;
-    opacity: 0.6;
-
+    stroke:red;
 }
 
-
-.skills p {
-    font-size: 13px;
+.skillList>ul{
+    display: flex;
+}
+.skillList>ul>li{
+    width: 350px;
+    height: 300px;
+    position: absolute;
     text-align: center;
-}  */
-
+}
+.skillList>ul>li p{
+    font-size: 0.9rem;
+}
+.skillList>ul>li .per{
+    font-size: 0px;
+}
+.skillList>ul>li:nth-of-type(1){
+    left: 35%;
+    top: 10%;
+    transform: translateX(-50%);
+}
+.skillList>ul>li:nth-of-type(2){
+    left: 65%;
+    top: 10%;
+    transform: translateX(-50%);
+}
+.skillList>ul>li:nth-of-type(3){
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.skillList>ul>li:nth-of-type(4){
+    right: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.skillList>ul>li:nth-of-type(5){
+    left: 35%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+.skillList>ul>li:nth-of-type(6){
+    left: 65%;
+    bottom: 0;
+    transform: translateX(-50%);
+}
+.skillList>ul>li img{
+    width: 50px;
+    height: 50px;
+}
 /* popup */
 .popup {
     height: 100vh;
@@ -843,17 +813,36 @@ b {
 }
 
 .bannerImg {
-    width: 100%;
-    height: 100%;
+    width: 1598px;
+    height: 735px;
     margin: 0 auto;
     overflow: hidden;
     position: absolute;
-    left: 58%;
-    top: 38%;
-    transform: translate(-50%, -50%);
+    top: 173px;
+    left: 8%;
+    /* transform: translate(-50%, -50%); */
 }
-
-.train{
+.swiper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+.swiper-wrapper{
+    position: relative;
+}
+  .swiper-slide img {
+    display: block;
+    object-fit: cover;
+  }
+/* .train{
     width:400%;
     height: 100%;
     display: flex;
@@ -882,7 +871,7 @@ b {
     left: 44%;
     bottom: 0%;
     transform: translate(-50%, -50%);
-}
+} */
 .tabmenu {
     position: absolute;
     left: 150px;
